@@ -1,5 +1,6 @@
 Version 2.5.41dev:
 
+* Implement action_pause to make action key configurable.
 * Separate auto-fire button (based on patch from S. Jordan).
 * Dedicated auto-fire button mapped to "right trigger" by default.
 * New boolean option jit_compiler (to enable/disable JIT compilation).
